Align DS_B config and wiki with DS_A
Same-discipline parity with DS_A (group B naming preserved):
- Add PowerShell windows override to javafxWindows_B build task
- Clean .gitattributes (drop stale _A ref and duplicate lines)
- Mirror README and wiki (Home, Git-LFS, VS-Code) structure/wording,
  keeping B-specific facts (LFS count 145, DS_B endpoint, no nested
  .gitattributes)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>